tests/functional/lang/eval-fail-getAttr-2.err.exp
error:
       … while calling the 'getAttr' builtin
         at /pwd/lang/eval-fail-getAttr-2.nix:1:1:
            1| builtins.getAttr "foo" [ ]
             | ^
            2|

       … while evaluating the second argument passed to builtins.getAttr

       error: expected a set but found a list: [ ]
